Basic-Project/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 8080
    targetPort: 80
