Basic-Project/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: app
spec:
  ingressClassName: nginx
  rules:
  - host: lucky1225.blog
    http:
      paths:
      - pathType: Prefix
        path: "/nginx"
        backend:
          service:
            name: nginx-svc
            port: 
              number: 8080
